--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
+    "db:up": "",
+    "db:up-docker": "", 
     "setup": "npm install && npm run build && docker-compose up -d"
   },
   "keywords": [],
