--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
     "db:up": "",
-    "db:up-docker": "", 
+    "db:up-docker": "",
     "setup": "npm install && npm run build && docker-compose up -d"
   },
   "keywords": [],
@@ -17,11 +17,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.12",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
