--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production node dist/server.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "setup": "npm install && npm run build && prisma migrate deploy && docker-compose up -d",
-    "prismaSetup": "npx prisma migrate dev && npx prisma generate",
+    "prisma:setup": "npx prisma migrate dev && npx prisma generate",
     "lint": "eslint 'src/**/*.{ts,js}' --fix",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
     "clean": "rm -rf dist node_modules",
