--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc --build --clean",
     "start": "NODE_ENV=production node dist/server.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
-    "setup": "npm install && npm run build && prisma migrate deploy && docker-compose up -d",
+    "deps:prepare": "npm install && npm run build && docker-compose up -d",
     "prisma:setup": "npx prisma migrate dev && npx prisma generate",
     "lint": "eslint 'src/**/*.{ts,js}' --fix",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
@@ -36,6 +37,8 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "gulp": "^5.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-tslint": "^8.1.4",
@@ -43,6 +46,7 @@
     "prettier": "^3.3.3",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
   }
 }
