--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --build --clean",
-    "start": "NODE_ENV=production node dist/server.js",
+    "start": "NODE_ENV=production 'ts-node' src/server.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "deps:prepare": "npm install && npm run build && docker-compose up -d",
     "prisma:setup": "npx prisma migrate dev && npx prisma generate",
