--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc --build --clean",
     "start": "NODE_ENV=production 'ts-node' src/server.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "test": "vitest",
     "deps:prepare": "npm install && npm run build && docker-compose up -d",
     "prisma:setup": "npx prisma migrate dev && npx prisma generate",
     "lint": "eslint 'src/**/*.{ts,js}' --fix",
@@ -22,7 +23,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -32,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.12",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "eslint": "^8.57.0",
@@ -47,6 +50,7 @@
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0"
+    "typescript-eslint": "^8.2.0",
+    "vitest": "^2.0.5"
   }
 }
