--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
