test: adjust test and add activity routes tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "NODE_ENV=production 'ts-node' src/server.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "test": "vitest --no-file-parallelism",
+    "test:file": "vitest run caminho/para/seu/arquivo-de-teste.spec.ts",
     "deps:prepare": "npm install && npm run build && docker-compose up -d",
+    "db:reset": "npx prisma migrate reset --force --skip-seed",
     "prisma:setup": "npx prisma migrate dev && npx prisma generate",
     "lint": "eslint 'src/**/*.{ts,js}' --fix",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
