--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --build --clean",
-    "start": "NODE_ENV=production 'ts-node' src/server.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "start": "NODE_ENV=production ts-node src/server.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
     "test": "vitest --no-file-parallelism",
     "test:file": "vitest run caminho/para/seu/arquivo-de-teste.spec.ts",
     "deps:prepare": "npm install && npm run build && docker-compose up -d",
@@ -24,6 +24,7 @@
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "supertest": "^7.0.0",
@@ -33,6 +34,7 @@
     "@eslint/js": "^9.9.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
